--- a/archives/toutiao-search/2023-12-08.md
+++ b/archives/toutiao-search/2023-12-08.md
@@ -1,66 +1,75 @@
 # 2023-12-08
 
-共 123 条
+共 131 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Fri Dec 08 2023 09:45:37 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Fri Dec 08 2023 10:20:53 GMT+0800 (China Standard Time) -->
 1. [撕毁司机超限证人员已被停岗](https://so.toutiao.com/search?keyword=撕毁司机超限证人员已被停岗)
 1. [司机高速上睡着致翻车竟躲过一劫](https://so.toutiao.com/search?keyword=司机高速上睡着致翻车竟躲过一劫)
 1. [我国外贸持续稳中向好](https://so.toutiao.com/search?keyword=我国外贸持续稳中向好)
 1. [夫妻街边吵架外卖小哥吃瓜](https://so.toutiao.com/search?keyword=夫妻街边吵架外卖小哥吃瓜)
-1. [华为高颜值HR回应火出圈](https://so.toutiao.com/search?keyword=华为高颜值HR回应火出圈)
-1. [大V谈大龄剩女择偶逻辑](https://so.toutiao.com/search?keyword=大V谈大龄剩女择偶逻辑)
+1. [AI人才缺口高达400万](https://so.toutiao.com/search?keyword=AI人才缺口高达400万)
 1. [日本北海道海岸现大量沙丁鱼尸体](https://so.toutiao.com/search?keyword=日本北海道海岸现大量沙丁鱼尸体)
-1. [中国留学生嫌邻居吵投毒被驱逐出境](https://so.toutiao.com/search?keyword=中国留学生嫌邻居吵投毒被驱逐出境)
-1. [奥司他韦缺货了？辟谣：供应充足](https://so.toutiao.com/search?keyword=奥司他韦缺货了？辟谣：供应充足)
 1. [大白鹅跟着主人摆摊卖蛋](https://so.toutiao.com/search?keyword=大白鹅跟着主人摆摊卖蛋)
+1. [85版诸葛亮扮演者李法曾去世](https://so.toutiao.com/search?keyword=85版诸葛亮扮演者李法曾去世)
+1. [奥司他韦缺货了？辟谣：供应充足](https://so.toutiao.com/search?keyword=奥司他韦缺货了？辟谣：供应充足)
+1. [村民收废旧床垫拆开全是钱](https://so.toutiao.com/search?keyword=村民收废旧床垫拆开全是钱)
 1. [媒体：2亿彩票能否回应奖池亏空猜测](https://so.toutiao.com/search?keyword=媒体：2亿彩票能否回应奖池亏空猜测)
-1. [摊主见城管跑路顾客仍淡定吃饭](https://so.toutiao.com/search?keyword=摊主见城管跑路顾客仍淡定吃饭)
 1. [解清帅养家生活曝光](https://so.toutiao.com/search?keyword=解清帅养家生活曝光)
+1. [摊主见城管跑路顾客仍淡定吃饭](https://so.toutiao.com/search?keyword=摊主见城管跑路顾客仍淡定吃饭)
 1. [江西民政厅调查2亿彩票事件](https://so.toutiao.com/search?keyword=江西民政厅调查2亿彩票事件)
 1. [刘德华妻子名字不是朱丽倩](https://so.toutiao.com/search?keyword=刘德华妻子名字不是朱丽倩)
-1. [秦岚亲了辛芷蕾](https://so.toutiao.com/search?keyword=秦岚亲了辛芷蕾)
-1. [中国福彩客服：2.2亿巨奖无内幕](https://so.toutiao.com/search?keyword=中国福彩客服：2.2亿巨奖无内幕)
 1. [高校回应老师课堂讲解“春宫图”](https://so.toutiao.com/search?keyword=高校回应老师课堂讲解“春宫图”)
-1. [新娘婚礼不配合 新郎强忍怒气劝解](https://so.toutiao.com/search?keyword=新娘婚礼不配合+新郎强忍怒气劝解)
-1. [杨幂倪妮船上牵手](https://so.toutiao.com/search?keyword=杨幂倪妮船上牵手)
-1. [赵本山女儿孕期写真曝光](https://so.toutiao.com/search?keyword=赵本山女儿孕期写真曝光)
-1. [业内：2.2亿得主是倍投计划幸存者](https://so.toutiao.com/search?keyword=业内：2.2亿得主是倍投计划幸存者)
-1. [夫妻采挖马蹄蕨售卖双双获刑](https://so.toutiao.com/search?keyword=夫妻采挖马蹄蕨售卖双双获刑)
-1. [普京“中东外交”引爆美舆论](https://so.toutiao.com/search?keyword=普京“中东外交”引爆美舆论)
-1. [杜华GQ红毯差点摔倒](https://so.toutiao.com/search?keyword=杜华GQ红毯差点摔倒)
-1. [霍启刚“炫妻拍照站位”](https://so.toutiao.com/search?keyword=霍启刚“炫妻拍照站位”)
-1. [村民收废旧床垫拆开全是钱](https://so.toutiao.com/search?keyword=村民收废旧床垫拆开全是钱)
-1. [85版诸葛亮扮演者李法曾去世](https://so.toutiao.com/search?keyword=85版诸葛亮扮演者李法曾去世)
-1. [生成式AI上演“超级星期三”](https://so.toutiao.com/search?keyword=生成式AI上演“超级星期三”)
-1. [李永乐：中奖彩民下注方式非常奇葩](https://so.toutiao.com/search?keyword=李永乐：中奖彩民下注方式非常奇葩)
-1. [男子家暴杀妻 儿子希望法院判死刑](https://so.toutiao.com/search?keyword=男子家暴杀妻+儿子希望法院判死刑)
-1. [日本女星深田恭子被曝出轨](https://so.toutiao.com/search?keyword=日本女星深田恭子被曝出轨)
+1. [中国福彩客服：2.2亿巨奖无内幕](https://so.toutiao.com/search?keyword=中国福彩客服：2.2亿巨奖无内幕)
 1. [62岁费翔谈年龄焦虑](https://so.toutiao.com/search?keyword=62岁费翔谈年龄焦虑)
-1. [13000TEU双燃料动力集装箱船交付](https://so.toutiao.com/search?keyword=13000TEU双燃料动力集装箱船交付)
-1. [江西2.2亿大奖彩票站：有人来沾喜气](https://so.toutiao.com/search?keyword=江西2.2亿大奖彩票站：有人来沾喜气)
+1. [新娘婚礼不配合 新郎强忍怒气劝解](https://so.toutiao.com/search?keyword=新娘婚礼不配合+新郎强忍怒气劝解)
+1. [李永乐：中奖彩民下注方式非常奇葩](https://so.toutiao.com/search?keyword=李永乐：中奖彩民下注方式非常奇葩)
+1. [赵本山女儿孕期写真曝光](https://so.toutiao.com/search?keyword=赵本山女儿孕期写真曝光)
+1. [普京“中东外交”引爆美舆论](https://so.toutiao.com/search?keyword=普京“中东外交”引爆美舆论)
+1. [业内：2.2亿得主是倍投计划幸存者](https://so.toutiao.com/search?keyword=业内：2.2亿得主是倍投计划幸存者)
+1. [热刺开季10轮不败后5轮只拿1分](https://so.toutiao.com/search?keyword=热刺开季10轮不败后5轮只拿1分)
+1. [霍启刚“炫妻拍照站位”](https://so.toutiao.com/search?keyword=霍启刚“炫妻拍照站位”)
+1. [媒体：日本斥巨资援乌克兰暗藏图谋](https://so.toutiao.com/search?keyword=媒体：日本斥巨资援乌克兰暗藏图谋)
+1. [地铁安检员对着空气安检？将整改](https://so.toutiao.com/search?keyword=地铁安检员对着空气安检？将整改)
 1. [个人网贷信息正全面接入征信系统](https://so.toutiao.com/search?keyword=个人网贷信息正全面接入征信系统)
+1. [耿爽：仁爱礁历来是中国的一部分](https://so.toutiao.com/search?keyword=耿爽：仁爱礁历来是中国的一部分)
+1. [AI发展会不会阻碍人类进步](https://so.toutiao.com/search?keyword=AI发展会不会阻碍人类进步)
+1. [夫妻采挖马蹄蕨售卖双双获刑](https://so.toutiao.com/search?keyword=夫妻采挖马蹄蕨售卖双双获刑)
+1. [村支书遭追尾后打对方司机被拘7天](https://so.toutiao.com/search?keyword=村支书遭追尾后打对方司机被拘7天)
+1. [男子家暴杀妻 儿子希望法院判死刑](https://so.toutiao.com/search?keyword=男子家暴杀妻+儿子希望法院判死刑)
+1. [王旭明建议取消教师公开课](https://so.toutiao.com/search?keyword=王旭明建议取消教师公开课)
+1. [大V谈大龄剩女择偶逻辑](https://so.toutiao.com/search?keyword=大V谈大龄剩女择偶逻辑)
+1. [日本女星深田恭子被曝出轨](https://so.toutiao.com/search?keyword=日本女星深田恭子被曝出轨)
+1. [秦岚亲了辛芷蕾](https://so.toutiao.com/search?keyword=秦岚亲了辛芷蕾)
 1. [尹锡悦带财阀搞“吃播”在韩引热议](https://so.toutiao.com/search?keyword=尹锡悦带财阀搞“吃播”在韩引热议)
-1. [北京鼓励老年人候鸟式养老](https://so.toutiao.com/search?keyword=北京鼓励老年人候鸟式养老)
-1. [学校回应老师用戒尺抽打学生手掌](https://so.toutiao.com/search?keyword=学校回应老师用戒尺抽打学生手掌)
+1. [伊朗总统率代表团抵达莫斯科](https://so.toutiao.com/search?keyword=伊朗总统率代表团抵达莫斯科)
 1. [检测站橘子丢失货主称不同意和解](https://so.toutiao.com/search?keyword=检测站橘子丢失货主称不同意和解)
-1. [媒体：雪乡“低价团”这事还没完](https://so.toutiao.com/search?keyword=媒体：雪乡“低价团”这事还没完)
 1. [云南一车辆燃烧 殡仪馆收到多具遗体](https://so.toutiao.com/search?keyword=云南一车辆燃烧+殡仪馆收到多具遗体)
 1. [夫妻吵架闹离婚围观学生唱歌劝和](https://so.toutiao.com/search?keyword=夫妻吵架闹离婚围观学生唱歌劝和)
 1. [夫妻将电瓶带回家引发火灾双双身亡](https://so.toutiao.com/search?keyword=夫妻将电瓶带回家引发火灾双双身亡)
+1. [媒体：雪乡“低价团”这事还没完](https://so.toutiao.com/search?keyword=媒体：雪乡“低价团”这事还没完)
+1. [江西2.2亿大奖彩票站：有人来沾喜气](https://so.toutiao.com/search?keyword=江西2.2亿大奖彩票站：有人来沾喜气)
+1. [姐姐留宿弟弟家被小狗查看十几次](https://so.toutiao.com/search?keyword=姐姐留宿弟弟家被小狗查看十几次)
+1. [黄绮珊韩红误打误撞成邻居](https://so.toutiao.com/search?keyword=黄绮珊韩红误打误撞成邻居)
+1. [卡梅伦“复出”能否挽救英国保守党](https://so.toutiao.com/search?keyword=卡梅伦“复出”能否挽救英国保守党)
+1. [杨紫穿白色羽绒服与朋友热聊](https://so.toutiao.com/search?keyword=杨紫穿白色羽绒服与朋友热聊)
 1. [五月天伴唱回应E6质疑：是钢琴记谱](https://so.toutiao.com/search?keyword=五月天伴唱回应E6质疑：是钢琴记谱)
+1. [华为高颜值HR回应火出圈](https://so.toutiao.com/search?keyword=华为高颜值HR回应火出圈)
+1. [中国留学生嫌邻居吵投毒被驱逐出境](https://so.toutiao.com/search?keyword=中国留学生嫌邻居吵投毒被驱逐出境)
+1. [杨幂倪妮船上牵手](https://so.toutiao.com/search?keyword=杨幂倪妮船上牵手)
+1. [杜华GQ红毯差点摔倒](https://so.toutiao.com/search?keyword=杜华GQ红毯差点摔倒)
+1. [生成式AI上演“超级星期三”](https://so.toutiao.com/search?keyword=生成式AI上演“超级星期三”)
+1. [13000TEU双燃料动力集装箱船交付](https://so.toutiao.com/search?keyword=13000TEU双燃料动力集装箱船交付)
+1. [北京鼓励老年人候鸟式养老](https://so.toutiao.com/search?keyword=北京鼓励老年人候鸟式养老)
+1. [学校回应老师用戒尺抽打学生手掌](https://so.toutiao.com/search?keyword=学校回应老师用戒尺抽打学生手掌)
 1. [伊朗外长想建受制裁者联盟抗衡西方](https://so.toutiao.com/search?keyword=伊朗外长想建受制裁者联盟抗衡西方)
-1. [地铁安检员对着空气安检？将整改](https://so.toutiao.com/search?keyword=地铁安检员对着空气安检？将整改)
-1. [王旭明建议取消教师公开课](https://so.toutiao.com/search?keyword=王旭明建议取消教师公开课)
 1. [男子因“隔夜酒”被查出酒驾](https://so.toutiao.com/search?keyword=男子因“隔夜酒”被查出酒驾)
-1. [AI发展会不会阻碍人类进步](https://so.toutiao.com/search?keyword=AI发展会不会阻碍人类进步)
 1. [妈妈收到家长职业调查表不知怎么写](https://so.toutiao.com/search?keyword=妈妈收到家长职业调查表不知怎么写)
 1. [解清帅妈妈：准备停了抗抑郁药](https://so.toutiao.com/search?keyword=解清帅妈妈：准备停了抗抑郁药)
 1. [林子祥在儿子婚礼上与前妻亲密搂肩](https://so.toutiao.com/search?keyword=林子祥在儿子婚礼上与前妻亲密搂肩)
 1. [找亲戚灌香肠后关系疏远了](https://so.toutiao.com/search?keyword=找亲戚灌香肠后关系疏远了)
 1. [以色列：“最激烈战斗”已经开始](https://so.toutiao.com/search?keyword=以色列：“最激烈战斗”已经开始)
 1. [GQ的小船故事多](https://so.toutiao.com/search?keyword=GQ的小船故事多)
-1. [杨紫穿白色羽绒服与朋友热聊](https://so.toutiao.com/search?keyword=杨紫穿白色羽绒服与朋友热聊)
 1. [女子父母重病又被杀猪盘骗407万](https://so.toutiao.com/search?keyword=女子父母重病又被杀猪盘骗407万)
 1. [男孩把小狗藏书包带到学校](https://so.toutiao.com/search?keyword=男孩把小狗藏书包带到学校)
 1. [美国为何罕见“惩罚”以色列人](https://so.toutiao.com/search?keyword=美国为何罕见“惩罚”以色列人)
@@ -122,7 +131,6 @@
 1. [中指研究院：房价上涨仍乏力](https://so.toutiao.com/search?keyword=中指研究院：房价上涨仍乏力)
 1. [钧正平：越是敏感地域越有美国魅影](https://so.toutiao.com/search?keyword=钧正平：越是敏感地域越有美国魅影)
 1. [俄沙就石油等领域合作达成一致](https://so.toutiao.com/search?keyword=俄沙就石油等领域合作达成一致)
-1. [黄绮珊韩红误打误撞成邻居](https://so.toutiao.com/search?keyword=黄绮珊韩红误打误撞成邻居)
 1. [伊拉克民兵组织再袭阿萨德空军基地](https://so.toutiao.com/search?keyword=伊拉克民兵组织再袭阿萨德空军基地)
 1. [赵雅芝眼中的河南有多绝](https://so.toutiao.com/search?keyword=赵雅芝眼中的河南有多绝)
 1. [库明加：年轻人应该给球队带来活力](https://so.toutiao.com/search?keyword=库明加：年轻人应该给球队带来活力)
